--- a/css/cart-page.css
+++ b/css/cart-page.css
@@ -1,13 +1,18 @@
 .cart-page{
     font-family: 'arabic-ui';
+    /* height: 100vh; */
+}
+.cart-page .btn-main{
+    min-width: 100px!important;
 }
 .categories .category{
     text-align: center;
     background-color: #fff;
     border-radius: 10px;
-    padding: 10px;
+    /* padding: 10px; */
     cursor: pointer;
-    font-size: 25px;
+    margin-bottom: 10px;
+    /* font-size: 16px; */
 
 }
 .categories .category span{display: block;}
@@ -17,24 +22,24 @@
     transition: all 0.3s;
 }
 .products{
-    margin-top: 20px;
-    display: grid;
-    grid-template-columns: repeat(7,1fr);
-    gap: 20px;
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
     display: none;
 }
 .products.active{
-    display: grid;
+    display: flex;
 }
 .products .product{
-    font-size: 22px;
+    font-size: 12px;
     text-align: center;
     background-color: #fff;
     color: blue;
-    padding: 10px;
+    padding: 5px;
     border-radius: 10px;
     border: 1px solid #fff;
     cursor: pointer;
+    margin: 5px;
 }
 .products .product span{
     display: block;
@@ -44,23 +49,23 @@
     box-shadow: 0 0 2px #666;
 }
 .added-items{
-    margin-top: 20px;
-    padding: 20px;
+    margin-top: 10px;
+    padding: 10px;
     width: 100%;
 }
 .added-items h4{
-    margin-bottom: 1.5rem !important;
+    margin-bottom: 10px !important;
 }
 .items{
     width: 100%;
     display: grid;
     grid-template-columns: repeat(5,1fr);
-    gap: 20px;
+    gap: 10px;
 }
 .item{
     background-color: #fff;
     border-radius: 10px;
-    font-size: 24px;
+    font-size: 12px;
     text-align: center;
     position: relative;
     border: 2px solid blue;
@@ -71,12 +76,12 @@
 }
 .item .delete{
     position: absolute;
-    width: 30px;
-    height: 30px;
+    width: 20px;
+    height: 20px;
     border-radius: 50%;
     background-color: rgba(255, 255, 255, 0.9);
-    top: -15px;
-    left: -15px;
+    top: -10px;
+    left: -10px;
     border: 1px solid #eee;
     display: flex;
     justify-content: center;
@@ -85,7 +90,7 @@
     cursor: pointer;
 }
 .count-div{
-    width: 100%;
+    /* width: 100%; */
     display: flex;
     border-top: 1px solid #ccc;
     padding: 5px;
@@ -93,8 +98,8 @@
     justify-content: space-between;
 }
 .count-div button{
-    width: 40px;
-    height: 40px;
+    width: 15px;
+    height: 15px;
     background-color: blue;
     color: #fff;
     display: flex;
@@ -102,10 +107,11 @@
     align-items: center;
     border: none;
     border-radius: 50%;
-    font-size: 1.5rem !important;
+    font-size: 0.5rem !important;
 }
 .count-div .count{
-    width: 50px;
+    /* width: 30px; */
+    flex: 1;
     text-align: center;
     border: none !important;
     color: blue;
@@ -125,16 +131,16 @@
 
 /*payment data form*/
 .payment .form-group{
-    margin: 35px 0;
+    margin: 5px 0;
 }
 .payment input[type='text']{
     border: none;
     outline: none;
     display: block;
-    padding: 10px 5px;
-    font-size: 22px;
+    padding: 5px;
+    font-size: 14px;
     text-align: center;
-    width: 252px;
+    /* width: 252px; */
     max-width: 100% !important;
 }
 .payment input:disabled{
@@ -144,23 +150,22 @@
     background-color: #b3b3ab;
 }
 .payment label{
-    font-size: 20px;
+    font-size: 14px;
 }
 
 
 /*Responsive Style*/
 @media(max-width:767px) {
-    .categories .category{font-size: 11px;margin-bottom: 15px;}
-
+    .categories .category{font-size: 11px;margin-bottom: 10px;}
     .products{grid-template-columns: repeat(4,1fr);}
     .product{font-size: 11px !important;}
     .added-items{padding: 0;}
-    .items{gap: 10px; grid-template-columns: repeat(4,1fr)!important;}
+    .items{gap: 10px; grid-template-columns: repeat(5,1fr)!important;}
     .items .item{font-size: 11px !important;}
-    .items .item .delete{width: 20px;height: 20px;}
+    .items .item .delete{width: 15px;height: 15px;}
     .count-div .count{width: 50px;}
-    .count-div button{width: 20px;height: 20px;}
-    .payment input[type='text']{font-size: 16px;}
+    .count-div button{width: 15px;height: 15px;}
+    .payment input[type='text']{font-size: 12px;}
     .payment label{
         font-size: 14px;
     }
@@ -171,22 +176,16 @@
         flex-wrap: wrap;
         justify-content: space-between;
     }
-    .payment-data .form-group{
-        width: 40%;
-    }
-    .payment-data input{
-        width: 155px !important;
-    }
 
     
 }
  @media(max-width:991px){
-    .items .item .delete{width: 25px;height: 25px;}
+    .items .item .delete{width: 20px;height: 20px;}
     .count-div .count{width: 50px;}
-    .count-div button{width: 25px;height: 25px;}
+    .count-div button{width: 15px;height: 15px;}
     .products{grid-template-columns: repeat(6,1fr);}
     .payment .form-group{
-        margin: 18px 0;
+        margin: 10px 0;
     }
 }
 
